fixes contact spacing and border radius

--- a/wp-content/themes/hodgesmace/style.css
+++ b/wp-content/themes/hodgesmace/style.css
@@ -378,8 +378,8 @@ hr {
  */
 
 .site-content .rounded-box-gray, .site-content .rounded-box-white {
-  border-radius: 1.5em;
-  padding: 1.5em 2em;
+  border-radius: .75em;
+  padding: 5%;
 }
 
 /* Gray */
